--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 
     <!-- <img> (Image) tag is used to display images.-->
     <img src="" alt="">
-        <!-- Example:
-            <img src="images/my_image.jpeg" alt="A description of the image">
-        -->
+        <img src="images/my_image.jpeg" alt="A description of the image">
 
     <!-- <nav> (Navigation) is used to create a menu with links to other pages or external sites. -->
     <nav>
@@ -50,7 +48,7 @@
             -->
 
         <!-- Complete the navigation as needed following the structure -->
-        <a href="">____</a>
+        <a href="https://github.com/gtironi/dataviz_01" target="_blank">Repositorio</a>
             <!-- Navigation link to the ____ page (inside the "____" folder) -->
 
         <!-- NOTE: to link to external URLs you cna directly use the link at 'href'. Then, you can set target="_blank" to make it always open in a new tab.
