--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     <!-- Next line is for Step 5, to link the stylesheet to the HTML page. We will use "link" for this  -->
-    <link rel="" href="">
+    <link rel="stylesheet" href="style.css">
         <!--    rel="stylesheet" specifies the relationship (rel) between the HTML document and the linked file.
                 href="style.css" specifies the location (href) of the external file.
                 For example:
@@ -35,8 +35,7 @@
     <p> Oi Professor, estou fazendo o site aqui! </p>
 
     <!-- <img> (Image) tag is used to display images.-->
-    <img src="" alt="">
-        <img src="images/my_image.jpeg" alt="A description of the image">
+    <img src="images/my_image.jpeg" alt="A description of the image">
 
     <!-- <nav> (Navigation) is used to create a menu with links to other pages or external sites. -->
     <nav>
