--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                 "Home" is the text that will be displayed as the clickable link.
             -->
 
+        <a href="projects/index.html">Projects</a>
+
         <!-- Complete the navigation as needed following the structure -->
         <a href="https://github.com/gtironi/dataviz_01" target="_blank">Repositorio</a>
             <!-- Navigation link to the ____ page (inside the "____" folder) -->
