--- a/index.html
+++ b/index.html
@@ -41,21 +41,9 @@
     <nav>
         <!-- Navigation link to the home page -->
         <a href="index.html">Home</a>
-            <!--
-                href="index.html" refers to the file that this link will open.
-                "Home" is the text that will be displayed as the clickable link.
-            -->
-
         <a href="projects/index.html">Projects</a>
-
-        <!-- Complete the navigation as needed following the structure -->
+        <a href="contact/index.html">Contact</a>
         <a href="https://github.com/gtironi/dataviz_01" target="_blank">Repositorio</a>
-            <!-- Navigation link to the ____ page (inside the "____" folder) -->
-
-        <!-- NOTE: to link to external URLs you cna directly use the link at 'href'. Then, you can set target="_blank" to make it always open in a new tab.
-            For example:
-            <a href="https://www.google.com" target="_blank">Google</a>
-        -->
     </nav>
 
 </body> <!-- End of "body" section  -->
