--- a/projects/index.html
+++ b/projects/index.html
@@ -11,18 +11,9 @@
         <nav>
             <!-- Navigation link to the home page -->
             <a href="../index.html">Home</a>
-                <!--
-                    href="../index.html" refers to the file that this link will open
-                    The "../" moves up one directory (out of the current folder) before looking for index.html
-=                -->
-
-            <!-- Navigation link to this same page i.e. projects/index.html-->
             <a href="index.html">Projects</a>
-                <!-- Please note that here we do NOT use "../" because index.html is already in the current folder.-->
-
-            <!-- Complete the navigation as needed following the structure -->
+            <a href="../contact/index.html">Contacts</a>
             <a href="https://github.com/gtironi/dataviz_01" target="_blank">Repositorio</a>
-
         </nav>
 
 </body>
