--- a/projects/index.html
+++ b/projects/index.html
@@ -13,6 +13,7 @@
             <a href="../index.html">Home</a>
             <a href="index.html">Projects</a>
             <a href="../contact/index.html">Contacts</a>
+            <a href="../resume/index.html">Resume</a>
             <a href="https://github.com/gtironi/dataviz_01" target="_blank">Repositorio</a>
         </nav>
 
