--- a/contact/index.html
+++ b/contact/index.html
@@ -25,6 +25,7 @@
             <a href="../index.html">Home</a>
             <a href="../projects/index.html">Projects</a>
             <a href="index.html">Contacts</a>
+            <a href="../resume/index.html">Resume</a>
             <a href="https://github.com/gtironi/dataviz_01" target="_blank">Repositorio</a>
         </nav>
 
