--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <a href="index.html">Home</a>
         <a href="projects/index.html">Projects</a>
         <a href="contact/index.html">Contact</a>
+        <a href="resume/index.html">Resume</a>
         <a href="https://github.com/gtironi/dataviz_01" target="_blank">Repositorio</a>
     </nav>
 
