added links in resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -25,11 +25,11 @@
     <section>
         <h2>Certificados</h2>
         <ul>
-            <li>Using Python to Access Web Data - University of Michigan</li>
-            <li>The Nuts and Bolts of Machine Learning - Google</li>
-            <li>Getting Started with Data Visualization in R - Johns Hopkins University</li>
-            <li>Laboratório de Programação Orientada a Objetos - Universidade de São Paulo</li>
-            <li>Finetuning Large Language Models - DeepLearning.ai</li>
+            <li><a href="https://www.coursera.org/learn/python-network-data" target=”_blank”>Using Python to Access Web Data - University of Michigan</a></li>
+            <li><a href="https://www.coursera.org/learn/the-nuts-and-bolts-of-machine-learning" target=”_blank”>The Nuts and Bolts of Machine Learning - Google</a></li>
+            <li><a href="https://www.coursera.org/learn/jhu-getting-started-data-viz-r" target=”_blank”>Getting Started with Data Visualization in R - Johns Hopkins University</a></li>
+            <li><a href="https://www.coursera.org/learn/lab-poo-parte-1" target=”_blank”>Laboratório de Programação Orientada a Objetos - Universidade de São Paulo</a></li>
+            <li><a href="https://www.coursera.org/learn/finetuning-large-language-models-project" target=”_blank”>Finetuning Large Language Models - DeepLearning.ai</a></li>
         </ul>
     </section>
 
