--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 
 <body> <!-- Start of "body" section  -->
 
+        <!-- <nav> (Navigation) is used to create a menu with links to other pages or external sites. -->
+            <nav>
+                <!-- Navigation link to the home page -->
+                <a href="index.html">Home</a>
+                <a href="projects/index.html">Projects</a>
+                <a href="contact/index.html">Contact</a>
+                <a href="resume/index.html">Resume</a>
+                <a href="https://github.com/gtironi/dataviz_01" target="_blank">Repositorio</a>
+            </nav>
+
     <!-- <h1> (Heading 1) represents the main heading of a webpage or a section.-->
     <h1> Gustavo Tironi </h1>
 
@@ -35,17 +45,8 @@
     <p> Oi Professor, estou fazendo o site aqui! </p>
 
     <!-- <img> (Image) tag is used to display images.-->
-    <img src="images/my_image.jpeg" alt="A description of the image">
+    <img src="images/my_image.jpeg" alt="A description of the image" width="500">
 
-    <!-- <nav> (Navigation) is used to create a menu with links to other pages or external sites. -->
-    <nav>
-        <!-- Navigation link to the home page -->
-        <a href="index.html">Home</a>
-        <a href="projects/index.html">Projects</a>
-        <a href="contact/index.html">Contact</a>
-        <a href="resume/index.html">Resume</a>
-        <a href="https://github.com/gtironi/dataviz_01" target="_blank">Repositorio</a>
-    </nav>
 
 </body> <!-- End of "body" section  -->
 </html>
