--- a/resume/index.html
+++ b/resume/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- Navigation menu: -->
+    <nav>
+        <!-- Navigation link to the home page -->
+        <a href="../index.html">Home</a>
+        <a href="../projects/index.html">Projetos</a>
+        <a href="../contact/index.html">Contato</a>
+        <a href="index.html">Currículo</a>
+        <a href="https://github.com/gtironi/dataviz_01" target="_blank">Repositório</a>
+    </nav>
+
     <section>
         <h2>Formação Acadêmica</h2>
         <article>
@@ -60,13 +71,5 @@
             <li><span class="bold">Machine Learning:</span> Scikit-learn, TensorFlow, Fine-tuning, Generative AI</li>
         </ul>
     </section>
-
-    <nav>
-        <a href="../index.html">Home</a>
-        <a href="../projects/index.html">Projetos</a>
-        <a href="../contact/index.html">Contato</a>
-        <a href="index.html">Currículo</a>
-        <a href="https://github.com/gtironi/dataviz_01" target="_blank">Repositório</a>
-    </nav>
 </body>
 </html>
