--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <!-- <nav> (Navigation) is used to create a menu with links to other pages or external sites. -->
             <nav>
                 <!-- Navigation link to the home page -->
-                <a href="index.html">Home</a>
+                <a href="index.html" class="current">Home</a>
                 <a href="projects/index.html">Projects</a>
                 <a href="contact/index.html">Contact</a>
                 <a href="resume/index.html">Resume</a>
-                <a href="https://github.com/gtironi/dataviz_01" target="_blank">Repositorio</a>
+                <a href="https://github.com/gtironi/dataviz_01" target="_blank">Github</a>
             </nav>
 
     <!-- <h1> (Heading 1) represents the main heading of a webpage or a section.-->
