--- a/projects/index.html
+++ b/projects/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Projects </title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -11,10 +12,10 @@
         <nav>
             <!-- Navigation link to the home page -->
             <a href="../index.html">Home</a>
-            <a href="index.html">Projects</a>
+            <a href="index.html" class="current">Projects</a>
             <a href="../contact/index.html">Contacts</a>
             <a href="../resume/index.html">Resume</a>
-            <a href="https://github.com/gtironi/dataviz_01" target="_blank">Repositorio</a>
+            <a href="https://github.com/gtironi/dataviz_01" target="_blank">Github</a>
         </nav>
 
 </body>
