--- a/resume/index.html
+++ b/resume/index.html
@@ -12,10 +12,10 @@
     <nav>
         <!-- Navigation link to the home page -->
         <a href="../index.html">Home</a>
-        <a href="../projects/index.html">Projetos</a>
-        <a href="../contact/index.html">Contato</a>
-        <a href="index.html">Currículo</a>
-        <a href="https://github.com/gtironi/dataviz_01" target="_blank">Repositório</a>
+        <a href="../projects/index.html">Projects</a>
+        <a href="../contact/index.html">Contact</a>
+        <a href="index.html" class="current">Resume</a>
+        <a href="https://github.com/gtironi/dataviz_01" target="_blank">Github</a>
     </nav>
 
     <section>
