--- a/contact/index.html
+++ b/contact/index.html
@@ -5,18 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Contacts </title>
     <link rel="stylesheet" href="../style.css">
+    <script type="module" src="../global.js"></script>
 </head>
 <body>
 
-        <!-- Navigation menu: -->
-        <nav>
-            <!-- Navigation link to the home page -->
-            <a href="../index.html">Home</a>
-            <a href="../projects/index.html">Projects</a>
-            <a href="index.html" class="current">Contacts</a>
-            <a href="../resume/index.html">Resume</a>
-            <a href="https://github.com/gtironi/dataviz_01" target="_blank">Github</a>
-        </nav>
 
         <!-- Forms: -->
         <form action="mailto:b51083@fgv.edu.br" method="get">
