--- a/index.html
+++ b/index.html
@@ -23,20 +23,12 @@
                 For example:
                  <link rel="stylesheet" href="style.css">
         -->
+    <script type="module" src="global.js"></script>
 
 </head> <!-- End of "head" section  -->
 
 <body> <!-- Start of "body" section  -->
 
-        <!-- <nav> (Navigation) is used to create a menu with links to other pages or external sites. -->
-            <nav>
-                <!-- Navigation link to the home page -->
-                <a href="index.html" class="current">Home</a>
-                <a href="projects/index.html">Projects</a>
-                <a href="contact/index.html">Contact</a>
-                <a href="resume/index.html">Resume</a>
-                <a href="https://github.com/gtironi/dataviz_01" target="_blank">Github</a>
-            </nav>
 
     <!-- <h1> (Heading 1) represents the main heading of a webpage or a section.-->
     <h1> Gustavo Tironi </h1>
@@ -45,7 +37,7 @@
     <p> Oi Professor, estou fazendo o site aqui! </p>
 
     <!-- <img> (Image) tag is used to display images.-->
-    <img src="images/my_image.jpeg" alt="A description of the image" width="500">
+    <img src="images/mike.png" alt="A description of the image" width="500">
 
 
 </body> <!-- End of "body" section  -->
