--- a/resume/index.html
+++ b/resume/index.html
@@ -5,19 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="../global.js"></script>
 </head>
 <body>
-
-    <!-- Navigation menu: -->
-    <nav>
-        <!-- Navigation link to the home page -->
-        <a href="../index.html">Home</a>
-        <a href="../projects/index.html">Projects</a>
-        <a href="../contact/index.html">Contact</a>
-        <a href="index.html" class="current">Resume</a>
-        <a href="https://github.com/gtironi/dataviz_01" target="_blank">Github</a>
-    </nav>
-
     <section>
         <h2>Formação Acadêmica</h2>
         <article>
